--- a/css/style.css
+++ b/css/style.css
@@ -3,11 +3,58 @@ body {
 }
 
 /* Grid CSS */
-
+#herogrid 
+{
+  margin: 0%;
+  display: grid;
+  min-height: 500px;
+  height: 70vh;
+  grid-template-columns: 75% 25% ;
+  grid-template-rows: 75% 25% ;
+  grid-template-areas: 
+  "#featuredProduct #secondaryProduct"
+  "#featuredProduct #CTA" ;
+}
 
 /* Category Grid CSS */
+#featuredProduct
+{
+  grid-area: featuredProduct;
+  background-image: url("../images/furniture1.png")
+
+}
+
+#secondaryProduct
+{ 
+  grid-area: secondaryProduct;
+  background-image: url("../images/furniture2.png");
+
+}
+
+#CTA
+{
+  grid-area:CTA;
+  background-image: url("../images/woodbg.png")  
+}
 
 
+
+
+
+
+
+
+
+
+
+.heroGridArea 
+{
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  align-items: center;
+  display: flex;
+}
 
 
 /* Navigation CSS */
