--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,19 @@ body {
 }
 
 /* Grid CSS */
-#herogrid 
+#heroGrid 
 {
-  margin: 0%;
+  margin: 0px 5%;
   display: grid;
   min-height: 500px;
   height: 70vh;
-  grid-template-columns: 75% 25% ;
-  grid-template-rows: 75% 25% ;
+  grid-template-rows: 75% 25%;
+  grid-template-columns: 75% 25%;
   grid-template-areas: 
-  "#featuredProduct #secondaryProduct"
-  "#featuredProduct #CTA" ;
+  "featuredProduct secondaryProduct"
+  "featuredProduct CTA";
 }
 
-/* Category Grid CSS */
 #featuredProduct
 {
   grid-area: featuredProduct;
@@ -34,18 +33,10 @@ body {
 #CTA
 {
   grid-area:CTA;
-  background-image: url("../images/woodbg.png")  
+  background-image: url("../images/woodbg.png");
+  justify-content: space-around;
+  cursor:pointer;
 }
-
-
-
-
-
-
-
-
-
-
 
 .heroGridArea 
 {
@@ -54,10 +45,141 @@ body {
   background-size: cover;
   align-items: center;
   display: flex;
+  position: relative
+
+}
+
+#headline
+{
+  border-bottom: 5px solid #FF6200;
+  background-color: rgba(255,255,255,0.8);
+  position: absolute; 
+  top: 100px;
+  right: -50px;
+  z-index: 100;
+  padding: 25px;
+  max-width: 550px;
+}
+
+/* Category Grid CSS */
+.subHeading
+{
+text-align:center;
+border-bottom: 2px solid black;
+width: 300px;
+margin: 50px auto;
+}
+
+#categoryGrid
+{
+margin: 0px 5%;
+display: grid;
+grid-template-rows: 300px 300px 300px; 
+grid-template-columns: 1fr 1fr 1fr;
+grid-template-areas: 
+"bookcases bedroom patio"
+"couches couches patio"
+"desks desks desks";
+}
+
+#bookcases
+{
+grid-area: bookcases;
+background-image: url("../images/bookcases.png")
+}
+
+#bedroom
+{
+grid-area: bedroom;
+background-image: url("../images/beds.png")
+}
+
+#couches
+{
+grid-area: couches;  
+background-image: url("../images/couch.png")
+}
+
+#patio
+{
+grid-area: patio;
+background-image: url("../images/patio.png");
+}
+
+#desks
+{
+grid-area: desks;
+background-image: url("../images/desks.png");
+}
+
+categoryGridArea
+{
+  background-position: center;
+  background-size: cover;
+  background-repeat: no-repeat;
+  margin: 5px;
+  cursor: pointer;
+  display: grid;
+  align-content: end;
+}
+
+.heading
+{
+  background-color: rgba(0,0,0,0.7);
+  padding: 15px;
+  height: 25px;
+  color: white;
+  font-size: 18px;
+  border-bottom:  5px solid #FF6200;
+
 }
 
 
 /* Navigation CSS */
+@media only screen and (max-width: 1000px)
+{
+  #navigation
+  {
+    display: none;
+  }
+   
+  #icons
+  {
+    margin-left: auto;
+  }
+
+}
+
+@media only screen and (max-width: 600px)
+{
+  #headline
+  {
+    position: static;
+    margin: 20px;
+
+  }
+  
+}
+
+#heroGrid
+{
+grid-template-areas: 
+"featuredProduct featuredProduct"
+"secondaryProduct CTA";
+}
+
+#categoryGrid
+{
+  grid-template-rows: 300px 300px 300px 300px 300px;
+  grid-template-columns: 1fr ;
+  grid-template-areas: 
+  "bookcases"
+  "bedroom"
+  "patio"
+  "couches"
+  "desks";
+}
+
 /* CHECK OUT THIS CODE BELOW IF YOU WANT TO GET A REFRESHER ON FLEX */
 #navBar {
   display: flex;
