--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,17 @@ body {
   background-image: url("../images/furniture1.png")
 
 }
+#headline
+{
+  border-bottom: 5px solid #FF6200;
+  background-color: rgba(255,255,255,0.8);
+  position: absolute; 
+  top: 100px;
+  right: -50px;
+  z-index: 100;
+  padding: 25px;
+  max-width: 550px;
+}
 
 #secondaryProduct
 { 
@@ -36,18 +47,6 @@ body {
   background-image: url("../images/woodbg.png");
   justify-content: space-around;
   cursor:pointer;
-}
-
-#headline
-{
-  border-bottom: 5px solid #FF6200;
-  background-color: rgba(255,255,255,0.8);
-  position: absolute; 
-  top: 100px;
-  right: -50px;
-  z-index: 100;
-  padding: 25px;
-  max-width: 550px;
 }
 
 .heroGridArea 
@@ -81,38 +80,32 @@ grid-template-areas:
 "desks desks desks";
 }
 
-#bookcases
-{
-grid-area: bookcases;
-background-image: url("../images/bookcases.png")
+#bookcases {
+  grid-area: bookcases;
+  background-image: url("../images/bookcases@2x.png");
+
+}
+#bedroom {
+  grid-area: bedroom;
+  background-image: url("../images/beds@2x.png");
 }
 
-#bedroom
-{
-grid-area: bedroom;
-background-image: url("../images/beds.png")
+#couches {
+  grid-area: couches;
+  background-image: url("../images/couch@2x.png");
 }
 
-#couches
-{
-grid-area: couches;  
-background-image: url("../images/couch.png")
+#patio {
+  grid-area: patio;
+  background-image: url("../images/patio@2x.png");
 }
 
-#patio
-{
-grid-area: patio;
-background-image: url("../images/patio.png");
+#desks {
+  grid-area: desks;
+  background-image: url("../images/desks@2x.png");
 }
 
-#desks
-{
-grid-area: desks;
-background-image: url("../images/desks.png");
-}
-
-categoryGridArea
-{
+.categoryGridArea {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -135,51 +128,6 @@ categoryGridArea
 
 
 /* Navigation CSS */
-@media only screen and (max-width: 1000px)
-{
-  #navigation
-  {
-    display: none;
-    
-  }
-  .icons
-  {
-    margin-left: auto;
-  }
-
-  
-}
-
-@media only screen and (max-width: 600px)
-{
-  #headline
-  {
-    position: static;
-    margin: 20px;
-
-  }
-  
-  #heroGrid
-  {
-  grid-template-areas: 
-  "featuredProduct featuredProduct"
-  "secondaryProduct CTA";
-  }
-
-  #categoryGrid
-  { 
-  grid-template-rows: 300px 300px 300px 300px 300px;
-  grid-template-columns: 1fr ;
-  grid-template-areas: 
-  "bookcases"
-  "bedroom"
-  "patio"
-  "couches"
-  "desks";
-  }
-}
-
-
 /* CHECK OUT THIS CODE BELOW IF YOU WANT TO GET A REFRESHER ON FLEX */
 #navBar {
   display: flex;
@@ -242,4 +190,39 @@ h4 {
   font-weight: 300;
   margin: 0px 0px;
   color: #636364;
+}
+
+@media only screen and (max-width: 1000px) 
+{
+  #navigation {
+    display: none;
+  }
+  .icons {
+    margin-left: auto;
+  }
+}
+
+@media only screen and (max-width: 600px) 
+{
+  #headline {
+    position: static;
+    margin: 20px;
+  }
+
+  #heroGrid {
+    grid-template-areas:
+    "featuredProduct featuredProduct"
+    "secondaryProduct CTA";
+  }
+  #categoryGrid {
+    grid-template-rows: 300px 300px 300px 300px 300px;
+    grid-template-columns: 1fr;
+    grid-template-areas:
+      "bookcases"
+      "bedroom"
+      "patio"
+      "couches"
+      "desks"
+    ;
+  }
 }
